; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_drbgtest.c_test_rand_add.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_drbgtest.c_test_rand_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_rand_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_rand_add() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [256 x i8], align 16
  %3 = alloca i64, align 8
  %4 = getelementptr inbounds [256 x i8], [256 x i8]* %2, i64 0, i64 0
  %5 = call i32 @memset(i8* %4, i32 205, i32 256)
  %6 = getelementptr inbounds [256 x i8], [256 x i8]* %2, i64 0, i64 0
  %7 = call i32 @RAND_seed(i8* %6, i32 256)
  %8 = call i32 (...) @RAND_status()
  %9 = call i32 @TEST_true(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %29

12:                                               ; preds = %0
  store i64 256, i64* %3, align 8
  br label %13

13:                                               ; preds = %25, %12
  %14 = load i64, i64* %3, align 8
  %15 = icmp ugt i64 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %13
  %17 = getelementptr inbounds [256 x i8], [256 x i8]* %2, i64 0, i64 0
  %18 = load i64, i64* %3, align 8
  %19 = call i32 @RAND_add(i8* %17, i64 %18, double 0.000000e+00)
  %20 = call i32 (...) @RAND_status()
  %21 = call i32 @TEST_true(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %16
  store i32 0, i32* %1, align 4
  br label %29

24:                                               ; preds = %16
  br label %25

25:                                               ; preds = %24
  %26 = load i64, i64* %3, align 8
  %27 = add i64 %26, -1
  store i64 %27, i64* %3, align 8
  br label %13

28:                                               ; preds = %13
  store i32 1, i32* %1, align 4
  br label %29

29:                                               ; preds = %28, %23, %11
  %30 = load i32, i32* %1, align 4
  ret i32 %30
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @RAND_seed(i8*, i32) #1

declare dso_local i32 @TEST_true(i32) #1

declare dso_local i32 @RAND_status(...) #1

declare dso_local i32 @RAND_add(i8*, i64, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
